[package]
name = "filecoin-phase2"
version = "2.0.0"
description = "Phase2 for Filecoin circuits"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/filecoin-phase2"
readme = "README.md"

[dependencies]
bellperson = "=0.18.0"
blake2b_simd = "=0.5.11"
# Enable `__private_bench` to import `Fp` and `Fp2`.
blstrs = { version = "=0.4.1", features = ["__private_bench"] }
byteorder = "=1.4.3"
clap = "=2.34.0"
crossbeam = "=0.8.1"
dialoguer = "=0.8.0"
ff = "=0.11.0"
fff = "=0.3.1"
filecoin-hashers = { version = "=6.0.1", default-features = false }
filecoin-proofs = { version = "=11.0.1", default-features = false }
group = "=0.11.0"
groupy = "=0.4.1"
hex = "=0.4.3"
log = "=0.4.14"
num_cpus = "=1.13.0"
paired = "=0.22.0"
pairing = "=0.21.0"
# `rand` and `rand_chacha` versions used during Filecoin's second trusted-setup (EmptySectorUpdate/SnapDeals).
rand = "=0.8.4"
rand_chacha = "=0.3.1"
# `rand` and `rand_chacha` versions used during Filecoin's first trusted-setup (SDR-PoRep, Winning and Window-PoSt).
rand_ts1 = { package = "rand", version = "=0.7.3" }
rand_chacha_ts1 = { package = "rand_chacha", version = "=0.2.1" }
rayon = "=1.5.1"
simplelog = "=0.8.0"
storage-proofs-core = { version = "=11.0.1", default-features = false }
storage-proofs-porep = { version = "=11.0.1", default-features = false }
storage-proofs-post = { version = "=11.0.1", default-features = false }
storage-proofs-update = { version = "=11.0.1", default-features = false }
